--- a/app/src/main/res/layout/key_item.xml
+++ b/app/src/main/res/layout/key_item.xml
@@ -22,10 +22,11 @@
             android:layout_marginTop="10dp"
             android:layout_weight="2"
             android:text="@string/key_name"
+            android:singleLine="true"
             android:textSize="30sp"
             android:textStyle="bold" />
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
@@ -34,22 +35,40 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/account_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/key_account"
-                android:textSize="22sp" />
+                android:textSize="22sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/key_account"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
+                app:layout_constraintStart_toEndOf="@id/account_text"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 android:singleLine="true"
-                android:text="TextView"
                 android:textSize="18sp" />
-        </LinearLayout>
 
-        <LinearLayout
+            <ImageButton
+                android:id="@+id/account_copy"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="20dp"
+                android:background="?android:attr/selectableItemBackground"
+                android:contentDescription="@string/copy_toggle_tips"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_content_paste_black_24dp" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
@@ -59,21 +78,51 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/password_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/key_password"
-                android:textSize="22sp" />
+                android:textSize="22sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/key_password"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
                 android:singleLine="true"
-                android:text="TextView"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:layout_marginStart="10dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/password_text"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        </LinearLayout>
+            <Button
+                android:id="@+id/hide_pwd"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_gravity="center|end"
+                android:background="@drawable/hide_pwd_selector"
+                android:layout_marginEnd="25dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/pwd_copy"
+                app:layout_constraintTop_toTopOf="parent"
+                android:contentDescription="@string/hide_pwd_toggle_tips" />
+
+            <ImageButton
+                android:id="@+id/pwd_copy"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="20dp"
+                android:background="?android:attr/selectableItemBackground"
+                android:contentDescription="@string/copy_toggle_tips"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_content_paste_black_24dp" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -89,6 +138,7 @@
                 android:layout_height="wrap_content"
                 android:clickable="true"
                 android:text="@string/key_edit"
+                android:background="?android:attr/selectableItemBackground"
                 android:textColor="@color/colorEdit"
                 android:textSize="15sp"
                 android:textStyle="bold" />
@@ -100,6 +150,7 @@
                 android:layout_marginStart="40dp"
                 android:clickable="true"
                 android:text="@string/key_delete"
+                android:background="?android:attr/selectableItemBackground"
                 android:textColor="@color/colorEdit"
                 android:textSize="15sp"
                 android:textStyle="bold" />
