--- a/app/src/main/res/layout/key_item.xml
+++ b/app/src/main/res/layout/key_item.xml
@@ -22,6 +22,8 @@
             android:layout_marginTop="10dp"
             android:layout_weight="2"
             android:text="@string/key_name"
+            android:maxEms="10"
+            android:ellipsize="end"
             android:singleLine="true"
             android:textSize="30sp"
             android:textStyle="bold" />
@@ -52,6 +54,8 @@
                 app:layout_constraintStart_toEndOf="@id/account_text"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
+                android:maxEms="9"
+                android:ellipsize="end"
                 android:singleLine="true"
                 android:textSize="18sp" />
 
@@ -93,6 +97,8 @@
                 android:layout_height="wrap_content"
                 android:singleLine="true"
                 android:textSize="18sp"
+                android:maxEms="9"
+                android:ellipsize="end"
                 android:layout_marginStart="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/password_text"
