--- a/app/src/main/res/layout/edit_dialog.xml
+++ b/app/src/main/res/layout/edit_dialog.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/title_bg"
+        android:layout_marginEnd="3dp"
         android:gravity="center"
         android:paddingTop="7dp"
         android:paddingBottom="7dp"
