--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,8 +46,14 @@
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
-    <include layout="@layout/finger_print_layout"
-        android:visibility="gone"
-        android:id="@+id/cover_layout"/>
+    <include
+        android:id="@+id/cover_layout"
+        layout="@layout/finger_print_layout"
+        android:visibility="gone"/>
+
+    <include
+        android:id="@+id/number_panel_layout"
+        layout="@layout/number_panel_layout"
+        android:visibility="gone"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
