--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -34,5 +34,9 @@
         android:id="@+id/cover_layout2"
         layout="@layout/finger_print_layout"
         android:visibility="gone"/>
+    <include
+        android:id="@+id/number_panel_layout2"
+        layout="@layout/number_panel_layout"
+        android:visibility="gone"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
