--- a/app/src/main/res/layout/dialog_key.xml
+++ b/app/src/main/res/layout/dialog_key.xml
@@ -1,35 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_dialog_corner"
+    android:id="@+id/container_dialog_key"
     android:orientation="vertical">
 
     <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/title_dialog_key"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="3dp"
         android:background="@drawable/bg_title"
         android:gravity="center"
         android:paddingTop="7dp"
         android:paddingBottom="7dp"
         android:text="@string/title_dialog_key"
         android:textColor="@android:color/background_light"
-        android:textSize="28sp" />
+        android:textSize="28sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/layout_dialog_key_name"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingTop="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/title_dialog_key">
 
         <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/input_dialog_key_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="5dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             android:autofillHints="@string/hint_dialog_key_input_name"
             android:gravity="center"
             android:hint="@string/hint_dialog_key_input_name"
@@ -38,16 +46,20 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/layout_dialog_key_account"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingTop="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/layout_dialog_key_name">
 
         <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/input_dialog_key_account"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="5dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             android:autofillHints="@string/hint_dialog_key_input_account"
             android:ems="10"
             android:gravity="start"
@@ -61,15 +73,18 @@
         android:id="@+id/layout_dialog_key_mix_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingTop="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/layout_dialog_key_account"
         app:passwordToggleEnabled="true">
 
         <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/input_dialog_key_mix_pwd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="5dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             android:autofillHints="@string/hint_dialog_key_input_pwd"
             android:ems="10"
             android:gravity="start"
@@ -82,16 +97,19 @@
         android:id="@+id/layout_dialog_key_num_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingTop="16dp"
         android:visibility="gone"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/layout_dialog_key_mix_input"
         app:passwordToggleEnabled="true">
 
         <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/input_dialog_key_num_pwd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="5dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             android:autofillHints="@string/hint_dialog_key_input_pwd"
             android:ems="10"
             android:gravity="start"
@@ -104,10 +122,14 @@
         android:id="@+id/radio_group_dialog_key"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="16dp"
         android:layout_marginBottom="5dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/layout_dialog_key_num_input">
 
         <androidx.appcompat.widget.AppCompatRadioButton
             android:id="@+id/radio_btn_dialog_key_mix_pwd"
@@ -129,45 +151,52 @@
         android:id="@+id/switch_dialog_key_rand_pwd"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginBottom="5dp"
         android:text="@string/tips_dialog_key_switch_rand_pwd"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/radio_group_dialog_key" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/btn_dialog_key_cancel"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="5dp"
         android:layout_marginBottom="10dp"
-        android:orientation="horizontal">
+        android:layout_weight="1"
+        android:background="?android:attr/selectableItemBackground"
+        android:clickable="true"
+        android:gravity="center"
+        android:text="@string/tips_dialog_key_cancel_btn"
+        android:textColor="@color/colorEdit"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_weight="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/btn_dialog_key_confirm"
+        app:layout_constraintTop_toBottomOf="@id/switch_dialog_key_rand_pwd" />
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/btn_dialog_key_cancel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="?android:attr/selectableItemBackground"
-            android:clickable="true"
-            android:gravity="center"
-            android:text="@string/tips_dialog_key_cancel_btn"
-            android:textColor="@color/colorEdit"
-            android:textSize="18sp" />
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/btn_dialog_key_confirm"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="10dp"
+        android:layout_weight="1"
+        android:background="?android:attr/selectableItemBackground"
+        android:clickable="true"
+        android:gravity="center"
+        android:text="@string/tips_dialog_key_confirm"
+        android:textColor="@color/colorEdit"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/btn_dialog_key_cancel"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/switch_dialog_key_rand_pwd" />
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/btn_dialog_key_confirm"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="?android:attr/selectableItemBackground"
-            android:clickable="true"
-            android:gravity="center"
-            android:text="@string/tips_dialog_key_confirm"
-            android:textColor="@color/colorEdit"
-            android:textSize="18sp" />
-    </LinearLayout>
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
