--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -11,12 +11,14 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_frag_main_keys"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:elevation="4dp" />
 
         <com.example.keykeeper.view.widget.SideBar
             android:id="@+id/side_bar_frag_main"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:elevation="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
