--- a/app/src/main/res/layout/item_key.xml
+++ b/app/src/main/res/layout/item_key.xml
@@ -3,8 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
-    android:elevation="3dp"
+    android:layout_marginTop="5dp"
+    android:layout_marginBottom="5dp"
+    android:layout_marginEnd="18dp"
+    android:layout_marginStart="5dp"
+    android:elevation="8dp"
     app:cardCornerRadius="5dp"
     app:cardPreventCornerOverlap="false"
     app:cardUseCompatPadding="true">
